@@ -18,6 +18,7 @@
  * @package   Translation
  * @author    René de Kat <rdkat@home.nl>
  * @author    Hans <hans@hansbosnl.nl>
+ * @author    Ronald <ronald@proudsites.com>
  * @copyright 2004-2011 phpMyFAQ Team
  * @license   http://www.mozilla.org/MPL/MPL-1.1.html Mozilla Public License Version 1.1
  * @link      http://www.phpmyfaq.de
@@ -77,7 +78,7 @@ $PMF_LANG['msgS2FName'] = 'Uw naam:';
 $PMF_LANG['msgS2FEMail'] = 'Uw e-mailadres:';
 $PMF_LANG['msgS2FFriends'] = 'Uw vrienden:';
 $PMF_LANG['msgS2FEMails'] = '. e-mailadres:';
-$PMF_LANG['msgS2FText'] = 'Het volgende bericht wordt verstuurd:';
+$PMF_LANG['msgS2FText'] = 'Het volgende bericht wordt verzonden:';
 $PMF_LANG['msgS2FText2'] = 'U kunt het record vinden op het volgende adres:';
 $PMF_LANG['msgS2FMessage'] = 'Toegevoegd bericht voor uw vrienden:';
 $PMF_LANG['msgS2FButton'] = 'stuur e-mail';
@@ -90,7 +91,7 @@ $PMF_LANG['msgSearchAmounts'] = ' zoekresultaten';
 $PMF_LANG['msgSearchCategory'] = 'Categorie:';
 $PMF_LANG['msgSearchContent'] = 'Inhoud:';
 $PMF_LANG['msgNewContentHeader'] = 'Voorstel voor een nieuwe FAQ';
-$PMF_LANG['msgNewContentAddon'] = 'Uw voorstel wordt niet direct gepubliceerd, maar zal door de beheerder worden vrijgegeven bij ontvangst. Verplichte velden zijn: <strong>uw Naam</strong>, <strong>uw emailadres</strong>, <strong>categorie</strong>, <strong>koptekst</strong> en <strong>uw record</strong>. Scheid de sleutelwoorden alleen met een spatie aub.';
+$PMF_LANG['msgNewContentAddon'] = 'Uw voorstel wordt niet direct gepubliceerd, maar zal door een beheerder worden vrijgegeven na controle. Verplichte velden zijn: <strong>uw Naam</strong>, <strong>uw emailadres</strong>, <strong>categorie</strong>, <strong>koptekst</strong> en <strong>uw record</strong>. Scheid de sleutelwoorden alleen met een spatie aub.';
 $PMF_LANG['msgNewContentName'] = 'Uw naam:';
 $PMF_LANG['msgNewContentMail'] = 'Uw e-mailadres:';
 $PMF_LANG['msgNewContentCategory'] = 'Categorie:';
@@ -119,8 +120,8 @@ $PMF_LANG['msgHomeArticlesOnline'] = 'Actuele vragen';
 $PMF_LANG['msgNoNews'] = 'Geen nieuws is goed nieuws.';
 $PMF_LANG['msgLatestArticles'] = 'De meest recent gestelde vragen:';
 $PMF_LANG['msgMailThanks'] = 'Vriendelijk bedankt voor uw voorstel voor de FAQ.';
-$PMF_LANG['msgMailCheck'] = 'Er zijn nieuwe records in de FAQ! Controleer het beheerders gedeelte!';
-$PMF_LANG['msgMailContact'] = 'Uw bericht is naar de beheerder verstuurt.';
+$PMF_LANG['msgMailCheck'] = 'Er zijn nieuwe records in de FAQ! Controleer het beheerder gedeelte!';
+$PMF_LANG['msgMailContact'] = 'Uw bericht is naar een beheerder verzonden.';
 $PMF_LANG['err_noDatabase'] = 'Geen database verbinding beschikbaar.';
 $PMF_LANG['err_noHeaders'] = 'Geen categorie gevonden.';
 $PMF_LANG['err_noArticles'] = '<p>Geen vragen beschikbaar.</p>';
@@ -196,7 +197,7 @@ $PMF_LANG['ad_entry_category'] = 'Categorie:';
 $PMF_LANG['ad_entry_active'] = 'Actief?';
 $PMF_LANG['ad_entry_date'] = 'Datum:';
 $PMF_LANG['ad_entry_changed'] = 'Gewijzigd?';
-$PMF_LANG['ad_entry_changelog'] = 'Change-log';
+$PMF_LANG['ad_entry_changelog'] = 'Aanpassingslog';
 $PMF_LANG['ad_entry_commentby'] = 'Commentaar van';
 $PMF_LANG['ad_entry_comment'] = 'Commentaren:';
 $PMF_LANG['ad_entry_save'] = 'Opslaan';
@@ -284,7 +285,7 @@ $PMF_LANG['ad_adus_dberr'] = '<strong>database fout!</strong>';
 $PMF_LANG['ad_adus_exerr'] = 'Gebruikersnaam <strong>bestaat</strong> al.';
 $PMF_LANG['ad_sess_id'] = 'ID';
 $PMF_LANG['ad_sess_sid'] = 'Sessie-ID';
-$PMF_LANG['ad_sess_ip'] = 'IP-Adress';
+$PMF_LANG['ad_sess_ip'] = 'IP-adres';
 $PMF_LANG['ad_sess_time'] = 'Tijd';
 $PMF_LANG['ad_sess_pageviews'] = 'Paginaweergaven';
 $PMF_LANG['ad_sess_search'] = 'Zoeken';
@@ -315,7 +316,7 @@ $PMF_LANG['ad_rs_no'] = 'Geen rangschikking beschikbaar';
 $PMF_LANG['ad_auth_insert'] = 'Vul uw gebruikersnaam en wachtwoord in alstublieft.';
 $PMF_LANG['ad_auth_user'] = 'Gebruikersnaam:';
 $PMF_LANG['ad_auth_passwd'] = 'Wachtwoord:';
-$PMF_LANG['ad_auth_ok'] = 'Oke';
+$PMF_LANG['ad_auth_ok'] = 'OK';
 $PMF_LANG['ad_auth_reset'] = 'Terugzetten';
 $PMF_LANG['ad_auth_fail'] = 'De gebruikersnaam of het wachtwoord is ongeldig.';
 $PMF_LANG['ad_auth_sess'] = 'Het sessie ID is toegelaten.';
@@ -354,9 +355,9 @@ $PMF_LANG['ad_csv_prepare'] = 'Voorbereiden van de database queries...';
 $PMF_LANG['ad_csv_process'] = 'Uitvoeren van de database queries...';
 $PMF_LANG['ad_csv_of'] = 'van';
 $PMF_LANG['ad_csv_suc'] = 'waren succesvol.';
-$PMF_LANG['ad_csv_backup'] = 'Back-up';
+$PMF_LANG['ad_csv_backup'] = 'Backup';
 $PMF_LANG['ad_csv_rest'] = 'Zet een backup terug';
-$PMF_LANG['ad_menu_backup'] = 'Back-up';
+$PMF_LANG['ad_menu_backup'] = 'Backup';
 $PMF_LANG['ad_logout'] = 'Sessie succesvol beëndigd.';
 $PMF_LANG['ad_news_edit'] = 'Nieuws bewerken';
 $PMF_LANG['ad_cookie'] = 'Koekies';
@@ -365,7 +366,7 @@ $PMF_LANG['ad_kateg_add'] = 'toevoegen hoofdcategorie';
 $PMF_LANG['ad_kateg_rename'] = 'Hernoemen';
 $PMF_LANG['ad_adminlog_date'] = 'Datum';
 $PMF_LANG['ad_adminlog_user'] = 'Gebruiker';
-$PMF_LANG['ad_adminlog_ip'] = 'IP-Adress';
+$PMF_LANG['ad_adminlog_ip'] = 'IP-adres';
 $PMF_LANG['ad_stat_sess'] = 'Sessies';
 $PMF_LANG['ad_stat_days'] = 'Dagen';
 $PMF_LANG['ad_stat_vis'] = 'Sessies (Bezoeken)';
@@ -382,7 +383,7 @@ $PMF_LANG['ad_log_edit'] = '"Bewerk gebruiker"-formulier voor de volgende gebrui
 $PMF_LANG['ad_log_crea'] = '"Nieuw artikel" formulier.';
 $PMF_LANG['ad_log_crsa'] = 'Nieuwe record aangemaakt.';
 $PMF_LANG['ad_log_ussa'] = 'Gegevens bewerken van de gebruiker: ';
-$PMF_LANG['ad_log_usde'] = 'De nde gebruiker is verwijderd: ';
+$PMF_LANG['ad_log_usde'] = 'De gebruiker is verwijderd: ';
 $PMF_LANG['ad_log_beed'] = 'Bewerkingsformulier voor de gebruiker: ';
 $PMF_LANG['ad_log_bede'] = 'Verwijder het record: ';
 $PMF_LANG['ad_start_visits'] = 'Bezoeken';
@@ -399,7 +400,7 @@ $PMF_LANG['msgPageDoublePoint'] = 'Pagina:';
 $PMF_LANG['msgMainCategory'] = 'Hoofdcategorie';
 $PMF_LANG['ad_passwdsuc'] = 'Uw wachtwoord is gewijzigd.';
 $PMF_LANG['msgPDF'] = 'Geef dit weer als een PDF bestand';
-$PMF_LANG['ad_xml_head'] = 'XML-Back-up';
+$PMF_LANG['ad_xml_head'] = 'XML-Backup';
 $PMF_LANG['ad_xml_hint'] = 'Sla alle records van uw FAQ op in één XML bestand.';
 $PMF_LANG['ad_xml_gen'] = 'maak XML bestand';
 $PMF_LANG['ad_entry_locale'] = 'Taal';
@@ -470,7 +471,7 @@ $PMF_LANG['lostpwd_err_1'] = 'Fout: Gebruikersnaam en e-mailadres niet gevonden.
 $PMF_LANG['lostpwd_err_2'] = 'Fout: Verkeerde invoer!';
 $PMF_LANG['lostpwd_text_1'] = 'Bedankt voor uw aanvraag voor uw account informatie.';
 $PMF_LANG['lostpwd_text_2'] = 'Wijzig uw wachtwoord in de beheersectie van uw FAQ.';
-$PMF_LANG['lostpwd_mail_okay'] = 'E-mail is verstuurd.';
+$PMF_LANG['lostpwd_mail_okay'] = 'E-mail is verzonden.';
 $PMF_LANG['ad_xmlrpc_button'] = 'Haal het laatste phpMyFAQ versienummer op met behulp van de webservice';
 $PMF_LANG['ad_xmlrpc_latest'] = 'Laatste versie beschikbaar op';
 $PMF_LANG['ad_categ_select'] = 'Taal van de categorie';
@@ -483,16 +484,16 @@ $PMF_LANG['ad_entry_new_revision'] = 'Creëer nieuwe revisie?';
 $PMF_LANG['ad_entry_record_administration'] = 'Record administratie';
 $PMF_LANG['ad_entry_revision'] = 'Revisie';
 $PMF_LANG['ad_changerev'] = 'Selecteer Revisie';
-$PMF_LANG['msgCaptcha'] = 'Geef a.u.b. de karakters die je leest in de afbeelding';
+$PMF_LANG['msgCaptcha'] = 'Geef a.u.b. de karakters die u ziet in de afbeelding';
 $PMF_LANG['msgSelectCategories'] = 'Zoek in ...';
 $PMF_LANG['msgAllCategories'] = '... alle categorieën';
-$PMF_LANG['ad_you_should_update'] = 'Jouw phpMyFAQ installatie is verouderd. Je kan updaten naar de laatst beschikbare versie.';
+$PMF_LANG['ad_you_should_update'] = 'Uw phpMyFAQ installatie is verouderd. U kunt updaten naar de laatst beschikbare versie.';
 $PMF_LANG['msgAdvancedSearch'] = 'Geavanceerd zoeken';
 $PMF_LANG['spamControlCenter'] = 'Spam controle centrum';
-$PMF_LANG['ad_session_expiring'] = 'Jouw sessie verloop in %d minutes: zou je willen blijven werken?';
+$PMF_LANG['ad_session_expiring'] = 'Uw sessie verloop in %d minuten: Wilt u blijven werken?';
 $PMF_LANG['ad_stat_management'] = 'Sessie management';
 $PMF_LANG['ad_stat_choose'] = 'Kies de maand';
-$PMF_LANG['ad_stat_delete'] = 'Verwijder geselecteerde sessies direct';
+$PMF_LANG['ad_stat_delete'] = 'Geselecteerde sessies verwijderen';
 $PMF_LANG['ad_menu_glossary'] = 'Verklarendewoordenlijst';
 $PMF_LANG['ad_glossary_add'] = 'Verklarendewoordenlijst-record toevoegen';
 $PMF_LANG['ad_glossary_edit'] = 'Verklarendewoordenlijst bewerken';
@@ -517,7 +518,7 @@ $PMF_LANG['ad_linkcheck_searchbadonly'] = 'Enkel met defecte links';
 $PMF_LANG['ad_linkcheck_infoReason'] = 'Verdere informatie:';
 $PMF_LANG['ad_linkcheck_openurl_infoprefix'] = 'Gevonden tijdens het testen <strong>%s</strong>: ';
 $PMF_LANG['ad_linkcheck_openurl_notready'] = 'De Linkcheck is niet beschikbaar.';
-$PMF_LANG['ad_linkcheck_openurl_maxredirect'] = 'Maximaal aantal redirects overschreden: <strong>%d</strong>.';
+$PMF_LANG['ad_linkcheck_openurl_maxredirect'] = 'Maximaal aantal omleidingen (redirects) overschreden: <strong>%d</strong>.';
 $PMF_LANG['ad_linkcheck_openurl_urlisblank'] = 'URL verwijst naar een lege (blanko) URL.';
 $PMF_LANG['ad_linkcheck_openurl_tooslow'] = 'Host <strong>%s</strong> is traag of antwoord niet.';
 $PMF_LANG['ad_linkcheck_openurl_nodns'] = 'Host <strong>%s</strong> is traag of heeft geen DNS.';
@@ -540,8 +541,8 @@ $PMF_LANG['ad_linkcheck_config_th_owner'] = 'Eigenaar van de post';
 $PMF_LANG['ad_linkcheck_config_th_enabled'] = 'Ingesteld op de invoer inschakelen';
 $PMF_LANG['ad_linkcheck_config_th_locked'] = 'Instellen op Eigenaar vergrendelen';
 $PMF_LANG['ad_linkcheck_config_th_chown'] = 'Eigendom verkrijgen';
-$PMF_LANG['msgNewQuestionVisible'] = 'Daarvoor moet de administrator deze eerst vrijgegen.';
-$PMF_LANG['msgQuestionsWaiting'] = 'Wachtend op de vrijgave door de administrator:';
+$PMF_LANG['msgNewQuestionVisible'] = 'Daarvoor moet een beheerder deze eerst vrijgeven.';
+$PMF_LANG['msgQuestionsWaiting'] = 'Wachtend op de vrijgave door een beheerder:';
 $PMF_LANG['ad_entry_visibility'] = 'Record publiceren?';
 $PMF_LANG['ad_user_error_password'] = 'Gelieve uw wachtwoord op te geven. ';
 $PMF_LANG['ad_user_error_passwordsDontMatch'] = 'Wachtwoorden komen niet overeen.';
@@ -604,7 +605,7 @@ $PMF_LANG['admin_mainmenu_users'] = 'Gebruikers';
 $PMF_LANG['admin_mainmenu_content'] = 'Inhoud';
 $PMF_LANG['admin_mainmenu_statistics'] = 'Statistieken';
 $PMF_LANG['admin_mainmenu_exports'] = 'Export';
-$PMF_LANG['admin_mainmenu_backup'] = 'Back-up';
+$PMF_LANG['admin_mainmenu_backup'] = 'Backup';
 $PMF_LANG['admin_mainmenu_configuration'] = 'Configuratie';
 $PMF_LANG['admin_mainmenu_logout'] = 'Afmelden';
 $PMF_LANG['ad_categ_owner'] = 'Categoriebeheerder';
@@ -654,7 +655,7 @@ $PMF_LANG['ad_categ_remark_overview'] = 'De juiste volgorde van de categoriën w
 $PMF_LANG['msgUsersOnline'] = '<br>%d Gasten <br>%d Geregistreerd';
 $PMF_LANG['ad_adminlog_del_older_30d'] = 'Verwijder onmiddelijk logs ouder dan 30 dagen';
 $PMF_LANG['ad_adminlog_delete_success'] = 'Oudere logs succesvol verwijderd.';
-$PMF_LANG['ad_adminlog_delete_failure'] = 'Geen logs verwijderd: er heeft zich een fout voorgedaan tijdens de aanvraag';
+$PMF_LANG['ad_adminlog_delete_failure'] = 'Geen logs verwijderd: er heeft zich een fout voorgedaan tijdens de verwerking';
 $PMF_LANG['opensearch_plugin_install'] = 'voeg zoek plugin toe';
 $PMF_LANG['ad_quicklinks'] = 'Quick-links';
 $PMF_LANG['ad_quick_category'] = 'Voeg nieuwe categorie toe';
@@ -662,7 +663,7 @@ $PMF_LANG['ad_quick_record'] = 'Nieuwe vraag toevoegen';
 $PMF_LANG['ad_quick_user'] = 'Voeg nieuwe gebruiker toe';
 $PMF_LANG['ad_quick_group'] = 'Voeg nieuwe groep toe';
 $PMF_LANG['msgNewTranslationHeader'] = 'Vertaal voorstel';
-$PMF_LANG['msgNewTranslationAddon'] = 'Uw voorstel wordt nog niet meteen geplaatst, maar worden eerst goedgekeurd door een Administrator. Verplichte velden zijn <strong>uw Naam</strong>, <strong>uw email adres</strong>, <strong>uw titel vertaling</strong> en <strong>uw faq vertaling</strong>. splits kernwoorden aub met spaties.';
+$PMF_LANG['msgNewTranslationAddon'] = 'Uw voorstel wordt niet direct geplaatst, maar worden eerst goedgekeurd door een beheerder. Verplichte velden zijn <strong>uw Naam</strong>, <strong>uw email adres</strong>, <strong>uw titel vertaling</strong> en <strong>uw faq vertaling</strong>. splits kernwoorden aub met spaties.';
 $PMF_LANG['msgNewTransSourcePane'] = 'Bron veld';
 $PMF_LANG['msgNewTranslationPane'] = 'Vertalings veld';
 $PMF_LANG['msgNewTranslationName'] = 'Uw Naam:';
@@ -676,7 +677,7 @@ $PMF_LANG['ad_news_link_parent'] = 'Link opent in een bovenliggend venster';
 $PMF_LANG['ad_menu_comments'] = 'Opmerkingen';
 $PMF_LANG['ad_comment_administration'] = 'Opmerkingen administratie';
 $PMF_LANG['ad_comment_faqs'] = 'Opmerkingen in FAQ records:';
-$PMF_LANG['ad_comment_news'] = 'Opmerkingen  in Nieuws vragen:';
+$PMF_LANG['ad_comment_news'] = 'Opmerkingen in Nieuws vragen:';
 $PMF_LANG['ad_groups'] = 'Groepen';
 $PMF_LANG['ad_conf_order_id'] = 'ID (standaard)';
 $PMF_LANG['ad_conf_order_thema'] = 'Titel';
@@ -707,7 +708,7 @@ $PMF_LANG['msgRegThankYou'] = 'Dank u voor uw registratie';
 $PMF_LANG['emailRegSubject'] = '[%sitename%] Inschrijving: nieuwe gebruiker';
 $PMF_LANG['msgMostPopularSearches'] = 'De meest populaire zoekopdrachten zijn:';
 $PMF_LANG['ad_menu_searchstats'] = 'Zoek statistieken';
-$PMF_LANG['ad_searchstats_search_term'] = 'Tref woord';
+$PMF_LANG['ad_searchstats_search_term'] = 'Trefwoord';
 $PMF_LANG['ad_searchstats_search_term_count'] = 'Aantal';
 $PMF_LANG['ad_searchstats_search_term_lang'] = 'Taal';
 $PMF_LANG['ad_searchstats_search_term_percentage'] = 'Procenten';
@@ -720,19 +721,19 @@ $PMF_LANG['msgSendMailDespiteEverything'] = 'Nee, er is nog steeds geen adequaat
 $PMF_LANG['msgSendMailIfNothingIsFound'] = 'Is het gewenste antwoord vermeld in de bovenstaande resultaten?';
 $PMF_LANG['msgChooseLanguageToTranslate'] = 'Kies de taal voor vertaling';
 $PMF_LANG['msgLangDirIsntWritable'] = 'Vertalingen map is niet beschrijfbaar';
-$PMF_LANG['ad_menu_translations'] = 'Interface vertaling';
+$PMF_LANG['ad_menu_translations'] = 'Programma vertaling';
 $PMF_LANG['ad_start_notactive'] = 'Wachten op activering';
 $PMF_LANG['msgTransToolAddNewTranslation'] = 'Toevoegen van nieuwe vertaling';
 $PMF_LANG['msgTransToolLanguage'] = 'Taal';
-$PMF_LANG['msgTransToolActions'] = 'Akties';
+$PMF_LANG['msgTransToolActions'] = 'Acties';
 $PMF_LANG['msgTransToolWritable'] = 'Beschrijfbaar';
 $PMF_LANG['msgEdit'] = 'Wijzig';
 $PMF_LANG['msgDelete'] = 'Verwijder';
 $PMF_LANG['msgYes'] = 'ja';
 $PMF_LANG['msgNo'] = 'nee';
-$PMF_LANG['msgTransToolSureDeleteFile'] = 'Weet u zeker dat dit taal bestand moet worden verwijderd?';
-$PMF_LANG['msgTransToolFileRemoved'] = 'Taal bestand is verwijderd';
-$PMF_LANG['msgTransToolErrorRemovingFile'] = 'Fout in het taal bestand verwijderen';
+$PMF_LANG['msgTransToolSureDeleteFile'] = 'Weet u zeker dat dit taalbestand moet worden verwijderd?';
+$PMF_LANG['msgTransToolFileRemoved'] = 'Taalbestand is verwijderd';
+$PMF_LANG['msgTransToolErrorRemovingFile'] = 'Fout bij het verwijderen van het taalbestand';
 $PMF_LANG['msgVariable'] = 'Variabele';
 $PMF_LANG['msgCancel'] = 'Annuleren';
 $PMF_LANG['msgSave'] = 'Opslaan';
@@ -745,29 +746,29 @@ $PMF_LANG['msgTransToolLanguageCharset'] = 'Taal karakterset';
 $PMF_LANG['msgTransToolLanguageDir'] = 'Taal richting';
 $PMF_LANG['msgTransToolLanguageDesc'] = 'Taal omschrijving';
 $PMF_LANG['msgTransToolAddAuthor'] = 'Voeg auteur toe';
-$PMF_LANG['msgTransToolCreateTranslation'] = 'Voeg Vertaling Toe';
+$PMF_LANG['msgTransToolCreateTranslation'] = 'Voeg Vertaling toe';
 $PMF_LANG['msgTransToolTransCreated'] = 'Nieuwe vertaling gemaakt';
 $PMF_LANG['msgTransToolCouldntCreateTrans'] = 'Kan de nieuwe vertaling niet maken';
 $PMF_LANG['msgAdding3Dots'] = 'toevoegen ...';
 $PMF_LANG['msgTransToolSendToTeam'] = 'Verzenden naar phpMyFAQ team';
 $PMF_LANG['msgSending3Dots'] = 'verzenden ...';
-$PMF_LANG['msgTransToolFileSent'] = 'Taal bestand is gestuurd naar het phpMyFAQ team. Hartelijk dank voor het delen.';
-$PMF_LANG['msgTransToolErrorSendingFile'] = 'Er is een fout opgetreden tijdens het verzenden van het taal bestand';
+$PMF_LANG['msgTransToolFileSent'] = 'Taalbestand is gestuurd naar het phpMyFAQ team. Hartelijk dank voor het delen.';
+$PMF_LANG['msgTransToolErrorSendingFile'] = 'Er is een fout opgetreden tijdens het verzenden van het taalbestand';
 $PMF_LANG['msgTransToolPercent'] = 'Procenten';
 $PMF_LANG['msgAttachmentNotFound'] = 'Het bestand dat u wilt downloaden is niet gevonden op deze server';
 $PMF_LANG['ad_sess_noentry'] = 'Geen vermelding';
-$LANG_CONF['main.language'] = array(0 => "select", 1 => "Taal-bestand");
+$LANG_CONF['main.language'] = array(0 => "select", 1 => "Taalbestand");
 $LANG_CONF['main.languageDetection'] = array(0 => "checkbox", 1 => "Activeer automatische taal herkenning");
 $LANG_CONF['main.titleFAQ'] = array(0 => "input", 1 => "Titel van de FAQ");
 $LANG_CONF['main.currentVersion'] = array(0 => "print", 1 => "FAQ Versie");
 $LANG_CONF['main.metaDescription'] = array(0 => "input", 1 => "Beschrijving van de pagina");
-$LANG_CONF['main.metaKeywords'] = array(0 => "input", 1 => "Sleutelwoorden voor Spiders");
+$LANG_CONF['main.metaKeywords'] = array(0 => "input", 1 => "Sleutelwoorden voor Zoekmachines");
 $LANG_CONF['main.metaPublisher'] = array(0 => "input", 1 => "Naam van de uitgever");
 $LANG_CONF['main.administrationMail'] = array(0 => "input", 1 => "Emailadres van de beheerder");
 $LANG_CONF['main.contactInformations'] = array(0 => "area", 1 => "Contact informatie");
 $LANG_CONF['main.send2friendText'] = array(0 => "area", 1 => "Tekst voor de send2friend pagina");
 $LANG_CONF['main.maxAttachmentSize'] = array(0 => "input", 1 => "maximum grootte van bijlagen in Bytes (max. %sByte)");
-$LANG_CONF['main.disableAttachments'] = array(0 => "checkbox", 1 => "De bijlagen onder de records aantonen?");
+$LANG_CONF['main.disableAttachments'] = array(0 => "checkbox", 1 => "De bijlagen onder de records weergeven?");
 $LANG_CONF['main.enableUserTracking'] = array(0 => "checkbox", 1 => "Tracking activeren?");
 $LANG_CONF['main.enableAdminLog'] = array(0 => "checkbox", 1 => "Beheerlog activeren?");
 $LANG_CONF['main.ipCheck'] = array(0 => "checkbox", 1 => "Wilt u dat het IP wordt gecontroleerd wanneer de UINs in admin.php worden gecontroleerd?");
@@ -776,13 +777,13 @@ $LANG_CONF['main.numberOfShownNewsEntries'] = array(0 => "input", 1 => "Aantal n
 $LANG_CONF['main.bannedIPs'] = array(0 => "area", 1 => "Blokkeer deze IP adressen");
 $LANG_CONF['main.enableRewriteRules'] = array(0 => "checkbox", 1 => "mod_rewrite ondersteuning activeren? (standaard: gedeactiveerd)");
 $LANG_CONF['main.ldapSupport'] = array(0 => "checkbox", 1 => "LDAP ondersteuning activeren? (standaard: gedeactiveerd)");
-$LANG_CONF['main.referenceURL'] = array(0 => "input", 1 => "Basis URL voor link verificatie (bijv.: http://www.voorbeeld.org/faq)");
+$LANG_CONF['main.referenceURL'] = array(0 => "input", 1 => "Basis URL voor link verificatie (bijv.: http://www.voorbeeld.nl/faq)");
 $LANG_CONF['main.urlValidateInterval'] = array(0 => "input", 1 => "Interval tussen AJAX link verificaties (in seconds)");
 $LANG_CONF['records.enableVisibilityQuestions'] = array(0 => "checkbox", 1 => "Uitschakelen zichtbaarheid van nieuwe vragen?");
-$LANG_CONF['main.permLevel'] = array(0 => "select", 1 => "Rechten level");
+$LANG_CONF['main.permLevel'] = array(0 => "select", 1 => "Rechten nivo");
 $LANG_CONF['spam.enableSafeEmail'] = array(0 => "checkbox", 1 => "Geef de gebruikers e-mail op een veilige manier weer (standaard: ingesteld).");
 $LANG_CONF['spam.checkBannedWords'] = array(0 => "checkbox", 1 => "Controlleer publiekelijk formulier tegen verboden woorden (standaard: ingesteld).");
-$LANG_CONF['spam.enableCaptchaCode'] = array(0 => "checkbox", 1 => "Gebruik een captcha code om publiekelijk formulier verzending toe te staan (standaard: ingesteld).");
+$LANG_CONF['spam.enableCaptchaCode'] = array(0 => "checkbox", 1 => "Gebruik een Captcha code om publiekelijke formulier verzending toe te staan (standaard: ingesteld).");
 $LANG_CONF['records.numberOfRelatedArticles'] = array(0 => "input", 1 => "aantal verwante artikelen");
 $LANG_CONF['records.orderby'] = array(0 => 'select', 1 => 'Sortering (afhankelijk  van eigenschap)');
 $LANG_CONF['records.sortby'] = array(0 => 'select', 1 => 'Sortering (aflopend of oplopen)');
@@ -810,7 +811,7 @@ $LANG_CONF['search.useAjaxSearchOnStartpage'] = array(0 => "checkbox", 1 => "Ins
 $PMF_LANG['msgTransToolRemove'] = 'Verwijder';
 $PMF_LANG['msgTransToolLanguageNumberOfPlurals'] = 'Aantal meervoud';
 $PMF_LANG['msgTransToolLanguageOnePlural'] = 'Deze taal kent slechts een meervoudsvorm';
-$PMF_LANG['msgTransToolLanguagePluralNotSet'] = 'Meervoud van talen ondersteunen %s is uitgeschakeld (nplurals not set)';
+$PMF_LANG['msgTransToolLanguagePluralNotSet'] = 'Meervoud van talen ondersteunen %s is uitgeschakeld (nplurals niet actief)';
 $PMF_LANG['plmsgHomeArticlesOnline']['0'] = 'Er is %d FAQ online';
 $PMF_LANG['plmsgHomeArticlesOnline']['1'] = 'Er zijn %d FAQs online';
 $PMF_LANG['plmsgViews']['0'] = '%d zicht';
@@ -822,7 +823,7 @@ $PMF_LANG['plmsgRegisteredOnline']['1'] = ' en %d Geregistreerde';
 $PMF_LANG['plmsgSearchAmount']['0'] = '%d zoek resultaat';
 $PMF_LANG['plmsgSearchAmount']['1'] = '%d zoek resultaten';
 $PMF_LANG['plmsgPagesTotal']['0'] = ' %d Pagina';
-$PMF_LANG['plmsgPagesTotal']['1'] = ' %d Pages';
+$PMF_LANG['plmsgPagesTotal']['1'] = ' %d Pagin\s';
 $PMF_LANG['plmsgVotes']['0'] = '%d Stem';
 $PMF_LANG['plmsgVotes']['1'] = '%d Votes';
 $PMF_LANG['plmsgEntries']['0'] = '%d FAQ';
@@ -839,4 +840,4 @@ $LANG_CONF['main.enableAttachmentEncryption'] = array(0 => "checkbox", 1 => "Jav
 $LANG_CONF['main.defaultAttachmentEncKey'] = array(0 => "input", 1 => "Default attachment encryption key <br><small>Ignored if attachment encryption is disabled</small><br><small><font color=\"red\">WARNING: Do not change this once set and enabled file encryption!!!</font></small>");
 $LANG_CONF['main.useSslForLogins'] = array(0 => "checkbox", 1 => "Only allow logins over secure connection? (default: disabled)");
 $PMF_LANG['plmsgUserOnline']['0'] = '%d gebruiker online';
-$PMF_LANG['plmsgUserOnline']['1'] = '';
+$PMF_LANG['plmsgUserOnline']['1'] = '%d gebruikers online';
