@@ -28,6 +28,8 @@ Version 2.7.0-beta2 - 2011-06-22
 - updated bundled Modernizr to version 1.7 (Thorsten)
 - updated bundled TinyMCE to version 3.4.2 (Thorsten)
 - updated bundled SyntaxHighlighter to version 3.0.83 (Thorsten)
+- updated Dutch translation (ronald AT proudsites DOT com)
+- updated German translation (Thorsten)
 - fixed a lot of bugs (Thorsten)
 
 Version 2.6.18 - 2011-07-
